[metadata]
root_url = https://github.com/thorwhalen/
license = mit
author = Thor Whalen
version = 0.0.8
description = Simple Mapping interface to HuggingFace
description_file = README.md
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
		datasets
		data science
		artificial intelligence
		AI
name = hfdol
display_name = hfdol
url = https://github.com/thorwhalen/hfdol
platforms = any

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	datasets
	huggingface

[options.extras_require]
testing = 
		

