[metadata]
name = hfdol
version = 0.1.15
url = https://github.com/thorwhalen/hfdol
platforms = any
description_file = README.md
root_url = https://github.com/thorwhalen/
license = mit
author = Thor Whalen
description = Simple Mapping interface to HuggingFace
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
		datasets
		data science
		artificial intelligence
		AI
display_name = hfdol

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	datasets
	huggingface

[options.extras_require]
testing = 
		

